Make statistics responsive

--- a/index.html
+++ b/index.html
@@ -452,40 +452,44 @@
         We speak with our powerfull statistics
       </div>
       <div class="statistics__line"></div>
-      <div class="statistics__users">
-        <div class="statistics__users__num">1M+</div>
-        <div class="statistics__users__detail">
+      <div class="statistics__side">
+
+      <div class="statistics__side__users">
+        <div class="statistics__side__users__num">1M+</div>
+        <div class="statistics__side__users__detail">
           <img
             src="./public/images/statistics/user.svg"
             alt=""
-            class="statistics__users__detail__img"
+            class="statistics__side__users__detail__img"
           />
-          <p class="statistics__users__detail__text">Active Users</p>
+          <p class="statistics__side__users__detail__text">Active Users</p>
         </div>
       </div>
-      <div class="statistics__reviews">
-        <div class="statistics__reviews__num">30K+</div>
-        <div class="statistics__reviews__detail">
+      <div class="statistics__side__reviews">
+        <div class="statistics__side__reviews__num">30K+</div>
+        <div class="statistics__side__reviews__detail">
           <img
             src="./public/images/statistics/star.svg"
             alt=""
-            class="statistics__reviews__detail__img"
+            class="statistics__side__reviews__detail__img"
           />
 
-          <p class="statistics__reviews__detail__text">5-Stars Reviews</p>
+          <p class="statistics__side__reviews__detail__text">5-Stars Reviews</p>
         </div>
       </div>
-      <div class="statistics__transactions">
-        <div class="statistics__transactions__num">$252M</div>
-        <div class="statistics__transactions__detail">
+      <div class="statistics__side__transactions">
+        <div class="statistics__side__transactions__num">$252M</div>
+        <div class="statistics__side__transactions__detail">
           <img
             src="./public/images/statistics/star.svg"
             alt=""
-            class="statistics__transactions__detail__img"
+            class="statistics__side__transactions__detail__img"
           />
-          <p class="statistics__transactions__detail__text">Transactions</p>
+          <p class="statistics__side__transactions__detail__text">Transactions</p>
         </div>
       </div>
+    </div>
+
     </div>
     <!--------------- Blogs Section --------------------------------->
     <div class="blogs">
