Make footer responsive

--- a/index.html
+++ b/index.html
@@ -659,19 +659,19 @@
         <div class="footer__top__company">
           <p class="footer__top__company__head">Company</p>
           <ul class="footer__top__company__body">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="#" class="footer__top__company__body__item">About Us</a></li>
+            <li><a href="#" class="footer__top__company__body__item">Careers</a></li>
+            <li><a href="#" class="footer__top__company__body__item">Blog</a></li>
+            <li><a href="#" class="footer__top__company__body__item">Pricing</a></li>
           </ul>
         </div>
         <div class="footer__top__resources"> 
           <p class="footer__top__resources__head">Resources</p>
           <ul class="footer__top__resources__body">
-            <li><a href="#">Proposal Template</a></li>
-            <li><a href="#">Invoice Template</a></li>
-            <li><a href="#">Tutorial</a></li>
-            <li><a href="#">How to write a contract</a></li>
+            <li><a href="#"  class="footer__top__resources__body__item">Proposal Template</a></li>
+            <li><a href="#"  class="footer__top__resources__body__item">Invoice Template</a></li>
+            <li><a href="#"  class="footer__top__resources__body__item">Tutorial</a></li>
+            <li><a href="#"  class="footer__top__resources__body__item">How to write a contract</a></li>
           </ul>
 
         </div>
